Aria-label do btn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>São Paulo, Brasil.</p>
             </div>
             <div class="toggle-btn" onclick="togglebtn();">
-                <button></button>
+                <button aria-label="change theme"></button>
                 <span></span>
             </div>
             <div class="links">
