--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Kaue</title>
     <link rel="stylesheet" href="style.css">
+    <meta
+    name="Descrição"
+    content="Uma página de Links com troca de tema dark e light">
 </head>
 <body>
 
