Links: Behance e Instagram adicionados

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <div class="links">
                 <section><a href="https://www.linkedin.com/in/kau%C3%AA-rafael-mazzone-3b96b22b1?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FFG%2FwihES8qWMLttzLZEGw%3D%3D" alt="Linkedin" target="_blank">Linkedin</a></section>
                 <section><a href="https://github.com/Kaue1881" alt="Github" target="_blank">Github</a></section>
+                <section><a href="https://www.behance.net/mazcreativesp" alt="Behance" target="_blank">Behance</a></section>
+                <section><a href="https://www.instagram.com/maz.creativesp/" alt="Instagram" target="_blank">Instagram - Maz Creative</a></section>
             </div>
             <div class="credits">
                 <p style="font-size: 10px;"> Kaue LTD</p>
